login page with fonts and color

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -6,4 +6,5 @@ hello account
 
 {{#each photos}}
   <img src="{{url}}" class="img-responsive" class="img hashtag-img">
+  <p> {{caption}} </p>
 {{/each}}
