--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,35 @@
-<a href="/auth/instagram">Login with Instagram</a>
+<!doctype html>
+<html>
+<head>
+	<title>Assignment 1</title>	
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->        
+      <<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+      <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
+      <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
+      <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+</head>
+
+<body>
+
+	<h1 class = "welcome">Welcome to InstaFacebook!</h1>
+	<h2 class = "welcome">Please login</h2>
+	<a href="/auth/instagram">Login with Instagram</a>  
+    
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+</body>
+</html>
+
+
+
+
+
