fb login and instagram feed

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,6 +23,7 @@
 	<h1 class = "welcome">Welcome to InstaFacebook!</h1>
 	<h2 class = "welcome">Please login</h2>
 	<a href="/auth/instagram">Login with Instagram</a>  
+  <a href="/auth/facebook">Login with Facebook</a>
     
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
