--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -21,7 +21,11 @@
 
 
 {{#each photos}}
-  <div class = "col-md-4 col-sm-4"><a href = "{{url}}" data-lightbox = "t1" data-title = "{{caption}}"><img src="{{url}}" alt = "pic"></a></div>
+  <div class = "col-md-4 col-sm-4">
+  	<a href = "{{url}}" data-lightbox = "t1" data-title = "{{caption}}">
+  		<img src="{{url}}" alt = "pic">
+  	</a>
+  </div>
 {{/each}}
 
   
