backtracking to redirect to FB

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,9 +24,10 @@
 	<h2 class = "welcome">Please login</h2>
 	<a href="/auth/instagram">Login with Instagram</a>  
   <a href="/auth/facebook">Login with Facebook</a>
-    
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
+  <!--<a href="/auth/facebook" target="_blank">
+  <img src="" />
+  </a>-->
+
 </body>
 </html>
 
