--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -23,7 +23,7 @@
 {{#each photos}}
   <div class = "col-md-4 col-sm-4">
   	<a href = "{{url}}" data-lightbox = "t1" data-title = "{{caption}}">
-  		<img src="{{url}}" alt = "pic">
+  		<img src="{{url}}" alt = "pic" class = "thumb">
   	</a>
   </div>
 {{/each}}
