--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,11 +19,12 @@
 </head>
 
 <body>
-
-	<h1 class = "welcome">Welcome to InstaFacebook!</h1>
+  <br><br><br><br><br><br><br>
+	<h1 class = "welcome">Welcome to InstaStats!</h1>
 	<h2 class = "welcome">Please login</h2>
-	<a href="/auth/instagram">Login with Instagram</a>  
-  	<a href="/auth/facebook">Login with Facebook</a>
+	<a href="/auth/instagram"><img href = "" src = "img/insta.png" class = "buttons" id = "insta"></a>  
+  <a href="/auth/facebook"><img href = "" src = "img/fb.png" class = "buttons" id = "fb"></a>
+
     
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
