--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,7 +23,7 @@
 	<h1 class = "welcome">Welcome to InstaStats!</h1>
 	<h2 class = "welcome">Please login</h2>
 	<a href="/auth/instagram"><img href = "" src = "img/insta.png" class = "buttons" id = "insta"></a>  
-  <a href="/auth/facebook"><img href = "" src = "img/fb.png" class = "buttons" id = "fb"></a>
+  <a href="/auth/facebook"><img src = "img/fb.png" class = "buttons" id = "fb"></a>
 
     
     <script src="https://code.jquery.com/jquery.js"></script>
