--- a/views/photos.handlebars
+++ b/views/photos.handlebars
@@ -9,8 +9,8 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/2.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.2.0/respond.min.js"></script>
     <![endif]-->        
       <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
@@ -23,14 +23,43 @@
 		<h1> InstaStats from {{curr_user.name}}'s Facebook </h1>
 	</div>
 	<div class = "container">
-{{#each curr_user}}
-	{{picture.url}}
-	<img src = "{{curr_user.picture.url}}" class = "img-responsive">
-	<img src = "{{curr_user.picture.likes}}" class = "img-responsive">
-{{/each}}
-	<img src = "{{curr_user.picture.url}}" class = "img-responsive">
+		<div class = "squareContainer">
+				<div class = "square col-md-2">
+					<h1> Name </h1>
+					<p class = "text"> ;ldkj;fla</p>
+				</div>
+				<div class = "square col-md-2">
+					<h1> Name </h1>
+					<p class = "text"> ;ldkj;fla</p>
+				</div>
+				<div class = "square col-md-2">
+					<h1> Name </h1>
+					<p class = "text"> ;ldkj;fla</p>
+				</div>
+				<div class = "square col-md-2">
+					<h1> Name </h1>
+					<p class = "text"> ;ldkj;fla</p>
+				</div>
+				<div class = "square col-md-2">
+					<h1> Name </h1>
+					<p class = "text"> ;ldkj;fla</p>
+				</div>
+				<div class = "square col-md-2">
+					<h1> Name </h1>
+					<p class = "text"> ;ldkj;fla</p>
+				</div>
+				<div class = "square col-md-2">
+					<h1> Name </h1>
+					<p class = "text"> ;ldkj;fla</p>
+				</div>
+				<div class = "square col-md-2">
+					<h1> Name </h1>
+					<p class = "text"> ;ldkj;fla</p>
+				</div>
+		</div>
 
-{{curr_user.bio}}
+	</div>
+{{curr_user.message}}
 {{curr_user.birthday}}
 {{curr_user.gender}}
 {{curr_user.link}}
