--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -18,6 +18,8 @@
 <p>Name:{{user.displayName}}</p> --}}
 
 <h1> Hello, {{user.username}}.</h1>
+<h3 class = "welcome">Click to see captions!</h3>
+
 
 
 {{#each photos}}
