--- a/views/photos.handlebars
+++ b/views/photos.handlebars
@@ -26,7 +26,7 @@
 		<div class = "squareContainer">
 				<div class = "square col-md-2">
 					<h1> Facebook ID </h1>
-					<p class = "text"> ;ldkj;fla</p>
+					<p class = "text"> {{curr_user.id}}</p>
 				</div>
 				<div class = "square col-md-2">
 					<h1> Birthday </h1>
@@ -59,14 +59,6 @@
 		</div>
 
 	</div>
-{{curr_user.message}}
-{{curr_user.birthday}}
-{{curr_user.gender}}
-{{curr_user.link}}
-{{curr_user.location}}
-
-
-{{curr_user.data.source}} IS SOURCE
 
 	</div>
   
