--- a/views/photos.handlebars
+++ b/views/photos.handlebars
@@ -50,7 +50,7 @@
 				</div>
 				<div class = "square col-md-2">
 					<h1> Link </h1>
-					<p class = "text"> Click to go to Profile!</p>
+					<p class = "text"> <a href="{{curr_user.link}}" style="color:  #FFFFFF">Click to go to your profile!</a></p>
 				</div>
 				<div class = "square col-md-2">
 					<h1> Timezone </h1>
