--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,7 +21,7 @@
 <body>
   <br><br><br><br><br><br>
 	<h1 class = "welcome">Welcome to InstaStats!</h1>
-	<h2 class = "welcome">Please login</h2>
+	<h2 class = "welcome">Please login</h2><br>
 	<a href="/auth/instagram"><img href = "" src = "img/insta.png" class = "buttons" id = "insta"></a>  
   <a href="/auth/facebook"><img src = "img/fb.png" class = "buttons" id = "fb"></a>
 
